# football_match_prediction

./: KNN.ipynb  KNN_football_predict.ipynb  README.md  data.csv  decision_tree_football_predict.ipynb  gradient_boosting_football_predict.ipynb  init_dataframe.ipynb  logictic_regression_football_predict.ipynb  pyproject.toml  random_forest_football_predict.ipynb  report.ipynb  sport_monks_api.py  svm_football_predict.ipynb
data/: data_extended.csv
data_train_models/: KNN_football_predict.ipynb  decision_tree_football_predict.ipynb  gradient_boosting_football_predict.ipynb  logictic_regression_football_predict.ipynb  random_forest_football_predict.ipynb  svm_football_predict.ipynb
